<resources>
    <string name="app_name">S Notes Style</string>
    <string name="widget_description">Quick access to notes</string>
    <string name="widget_quick_text">Text</string>
    <string name="widget_quick_checklist">Checklist</string>
    <string name="widget_quick_sticky">Sticky</string>
    <string name="widget_quick_drawing">Draw</string>
    <string name="widget_quick_meeting">Meet</string>
    <string name="shortcut_disabled">Shortcut disabled</string>
    <string name="shortcut_text_short">Text note</string>
    <string name="shortcut_text_long">Create or open a text note</string>
    <string name="shortcut_checklist_short">Checklist</string>
    <string name="shortcut_checklist_long">Create or open a checklist note</string>
    <string name="shortcut_sticky_short">Sticky note</string>
    <string name="shortcut_sticky_long">Create or open a sticky note</string>
    <string name="shortcut_draw_short">Handwriting</string>
    <string name="shortcut_draw_long">Create or open a handwriting note</string>
    <string name="shortcut_meeting_short">Meeting</string>
    <string name="shortcut_meeting_long">Create or open a meeting note</string>
    <string name="shortcut_journal_short">Journal</string>
    <string name="shortcut_journal_long">Create or open a daily journal note</string>
    <string name="shortcut_study_short">Study note</string>
    <string name="shortcut_study_long">Create or open a study note</string>
</resources>
