<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutId="quick_text_note"
        android:shortcutLongLabel="@string/shortcut_text_long"
        android:shortcutShortLabel="@string/shortcut_text_short">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.example.snotes.MainActivity"
            android:targetPackage="com.example.snotes" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutId="quick_handwriting_note"
        android:shortcutLongLabel="@string/shortcut_draw_long"
        android:shortcutShortLabel="@string/shortcut_draw_short">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.example.snotes.MainActivity"
            android:targetPackage="com.example.snotes" />
    </shortcut>
</shortcuts>
